--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="msapplication-TileImage" content="" />
     <title>government service locator</title>
     <!-- add link for the applice icons, mask icon manifest -->
+    <link rel="icon" href="/assets/logo/gsl_logo.png" />
 </head>
 
 <body>
