favicon, log and footer css styles set up.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileImage" content="" />
     <title>government service locator</title>
     <!-- add link for the applice icons, mask icon manifest -->
-    <link rel="icon" href="/assets/logo/gsl_logo.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
