--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <meta name="msapplication-TileImage" content="" />
     <title>government service locator</title>
     <!-- add link for the applice icons, mask icon manifest -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <!-- <link rel="manifest" href="/assets/site.webmanifest"> -->
+    <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#d33411">
+    <meta name="apple-mobile-web-app-title" content=" service locator">
+    <meta name="application-name" content=" service locator">
+    <meta name="msapplication-TileColor" content="#faf6f6">
+    <meta name="theme-color" content="#faf6f6"></head>
 
 <body>
     <div id="root"></div>
