--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
-    <meta name="msapplication-TileColor" content="" />
-    <meta name="msapplication-TileImage" content="" />
-    <title>government service locator</title>
-    <!-- add link for the applice icons, mask icon manifest -->
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
+    <meta
+      name="description"
+      content="Allows End-Users to easily find and locate government services in RSA. The app scrapes data from official government websites such as departments, agencies and public services, including contact information, operating hours, and services offered. Find and locate governement services in RSA."
+    />
+    <meta
+      name="keywords"
+      content="Lower Courts services locator, primary health care facilities, clinics, police stations, saps contacts."
+    />
+    <meta name="author" content="K.T Motshoana" />
+    <meta name="application-name" content=" service locator" />
+    <meta name="apple-mobile-web-app-title" content=" service locator" />
+    <meta name="msapplication-TileColor" content="#faf6f6" />
+    <meta name="theme-color" content="#faf6f6" />
+  </head>
+  <!-- <title>government service locator</title> -->
+ 
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <!-- <link rel="manifest" href="/assets/site.webmanifest"> -->
-    <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#d33411">
-    <meta name="apple-mobile-web-app-title" content=" service locator">
-    <meta name="application-name" content=" service locator">
-    <meta name="msapplication-TileColor" content="#faf6f6">
-    <meta name="theme-color" content="#faf6f6"></head>
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="/assets/web_app_icons/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/assets/web_app_icons/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/assets/web_app_icons/favicon-16x16.png"
+  />
+  
+  <link
+    rel="mask-icon"
+    href="/assets/web_app_icons/safari-pinned-tab.svg"
+    color="#d33411"
+  />
+  <link rel="manifest" href="manifest.json">
 
-<body>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  </body>
 </html>
